<resources>
    <string name="app_name">Exp1_S2_Jorge_Miranda</string>
    <string name="str_usuario">Rut</string>
    <string name="str_password">Contraseña</string>
    <string name="str_btn_iniciar">Iniciar Sesión</string>
    <string name="str_recuperar_contra"><u>¿Has Olvidado Tu contraseña?</u></string>
    <string name="str_registrarse"><u>Registrarse!</u></string>
    <string name="str_mensaje_recuperar_pass">A continuación el usuario podrá solicitar la recuperación de su contraseña.\nPara realizar el proceso deberá ingresar lo siguiente: Rut y correo.</string>
    <string name="str_correo">Correo</string>
    <string name="str_mensaje_entrada">Bienvienido!</string>
    <string name="str_mensaje_admin">Bienvenido Administrador!</string>
    <string name="str_rut">Rut</string>
    <string name="str_nombres">Nombres:</string>
    <string name="str_app_paterno">Apellido Paterno:</string>
    <string name="str_app_materno">Apellido Materno:</string>
    <string name="str_direccion">Dirección:</string>
</resources>