<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_backgoud"
    tools:context=".AdminActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_admin"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#4169E1"
        app:title="Menu de Administración"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="100dp"
        tools:ignore="UselessParent">


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:padding="11dp"
            android:text="@string/str_mensaje_admin"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">
            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:stretchColumns="4">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/str_rut"
                        android:background="@drawable/bordes"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/str_nombres"
                        android:background="@drawable/bordes"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/str_app_paterno"
                        android:background="@drawable/bordes"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/str_correo"
                        android:background="@drawable/bordes"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/str_password"
                        android:background="@drawable/bordes"/>
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>

    </LinearLayout>

</RelativeLayout>