<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_backgoud"
    tools:context=".RegistroActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_registro"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#4169E1"
        app:title="Registro de Usuario"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="100dp"
            tools:ignore="UselessParent">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="Favor de completar el siguiente formulario para registrarse en el sistema"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|left"
                android:text="@string/str_rut"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registro_rut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/app_button_shape"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/str_rut"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="18dp"
                android:textColor="@color/black"
                android:textColorHint="#9b9b9b"
                android:textSize="18sp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|left"
                android:text="@string/str_nombres"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registro_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/app_button_shape"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/str_nombres"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="18dp"
                android:textColor="@color/black"
                android:textColorHint="#9b9b9b"
                android:textSize="18sp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|left"
                android:text="@string/str_app_paterno"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registro_apellidopaterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/app_button_shape"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/str_app_paterno"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="18dp"
                android:textColor="@color/black"
                android:textColorHint="#9b9b9b"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|left"
                android:text="@string/str_app_materno"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registro_apellidomaterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/app_button_shape"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/str_app_materno"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="18dp"
                android:textColor="@color/black"
                android:textColorHint="#9b9b9b"
                android:textSize="18sp" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|left"
                android:text="@string/str_direccion"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registro_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/app_button_shape"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/str_direccion"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="18dp"
                android:textColor="@color/black"
                android:textColorHint="#9b9b9b"
                android:textSize="18sp" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|left"
                android:text="@string/str_correo"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registro_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/app_button_shape"

                android:layout_marginLeft="50dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/str_correo"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="18dp"
                android:textColor="@color/black"
                android:textColorHint="#9b9b9b"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|left"
                android:text="@string/str_password"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registro_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/app_button_shape"

                android:layout_marginLeft="50dp"
                android:layout_marginBottom="40dp"
                android:hint="@string/str_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="18dp"
                android:textColor="@color/black"
                android:textColorHint="#9b9b9b"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registrarse_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/white"
                android:padding="18dp"
                android:text="@string/str_registrarse"
                android:layout_marginBottom="80dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>